# knowu-bench-review

./: .dockerignore  .env.example  .gitignore  PROXY.md  README.md  index.html  leaderboard.json  pyproject.toml  style.css
docker/: Dockerfile  Pixel_8_API_34.ini  Pixel_8_API_34_x86_64.ini  entrypoint.sh  start_emulator.sh  start_novnc.sh  start_proxy.sh
docker/mastodon-docker/: .env.dev  Makefile  docker-compose.yml  readme.md
docker/mastodon-docker/nginx/conf.d/: mastodon.conf
docker/mastodon-docker/reverse-proxy/certs/: 10.0.2.2.fullchain.crt  dev_ca.crt
docker/mastodon-docker/scripts/: register_custom.sh  seed.sh
docker/mattermost-docker/: data.jsonl  docker-compose.yml
docs/: configure_avd.md  development.md  mcp_setup.md  setup_for_windows.md
scripts/: calc_paper_metrics.py  calc_persona_pref_routine_avg.py  calc_persona_pref_routine_merged_avg.py  calc_pref_routine_accuracy.py  calc_split_difficulty_metrics.py  run_agentic.sh  run_batch_metrics.sh  run_claude_e2e.sh  run_claude_pref_routine.sh  run_claude_pref_routine_debug_task.sh  run_eval.sh  run_gemini_e2e.sh  run_gpt_e2e.sh  run_manual.sh  run_qwen3_6_plus_eval.sh  run_qwen3vl.sh  run_qwen3vl_32b.sh  run_rag.sh  run_seed2_0_pro.sh
src/knowu_bench/: __init__.py  agent_interaction_tasks.jsonl  find_tasks.py  smart_proxy.py  test.py
src/knowu_bench/agents/: base.py  registry.py
src/knowu_bench/agents/grounding/: __init__.py  uiins.py
src/knowu_bench/agents/implementations/: gelab_agent.py  general_e2e_agent.py  gui_owl_1_5.py  mai_ui_agent.py  planner_executor.py  qwen3_5.py  qwen3_6_plus.py  qwen3vl.py  seed_agent.py  ui_venus_agent.py
src/knowu_bench/agents/utils/: agent_mapping.py  helpers.py  test_agent.py
src/knowu_bench/agents/utils/prompts/: seed.py  (+9 more)
src/knowu_bench/core/: __init__.py  cli.py  device_viewer.py  runner.py  server.py
src/knowu_bench/core/api/: __init__.py  env.py  info.py  server.py
src/knowu_bench/core/log_viewer/: __init__.py  __main__.py  app.py  routes.py  static_export.py  styles.py  utils.py
src/knowu_bench/core/subcommands/: __init__.py  device.py  env.py  eval.py  info.py  logs.py  server.py  test.py
src/knowu_bench/core/user_task_runner/: __init__.py  prerequisite.py  runner.py
src/knowu_bench/runtime/: client.py  controller.py  mcp_server.py
src/knowu_bench/runtime/app_helpers/: extra_apps.py  fossify_calendar.py  mail.py  mall.py  mastodon.py  mattermost.py  mcp.py  system.py
src/knowu_bench/runtime/setup/: base.py  calendar.py  clock.py  contacts.py  files.py  gallery.py  messages.py  settings.py  system_setup.py  test_app_calendar_setup.py  test_app_clock_setup.py  test_app_contacts_setup.py  test_app_files_setup.py  test_app_gallery_setup.py  test_app_messages_setup.py
src/knowu_bench/runtime/utils/: __init__.py  constants.py  docker.py  helpers.py  loader.py  models.py  parsers.py  precompute_task_embeddings.py  prompt_builder.py  proxy_config.py  routine_time.py  trajectory_logger.py  user_log_context.py  validation.py  xml.py
src/knowu_bench/tasks/: base.py  registry.py  test_task.py  utils.py
src/knowu_bench/user_logs/: developer.json  developer_noise_25pct.json  grandma.json  grandma_noise_25pct.json  student.json  student_noise_25pct.json  user.json  user_noise_25pct.json
src/knowu_bench/user_profile/: developer.yaml  grandma.yaml  student.yaml  template.yaml  user.yaml
(+86 files in other folders)
